--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,16 @@ body{
     font-family: 'Bubblegum Sans', cursive;
     font-size: 22px;
 }
-.navbar{
+
+header {
     position: sticky;
-    justify-content: space-around;
     top: 0;
     width: 100%;
     z-index: 10;
     border-bottom: 1.3px ridge rgb(134, 168, 199);
-    height: 7.5rem; 
+    height: 7.5rem;
     background-color: white;
 }
-
 
 #btn-filters:hover{
     cursor: pointer;
@@ -153,17 +152,14 @@ footer {
 
 #navbar-mobile {
     display: none;
-    position: flex;
+    position: fixed;
+    background-color: #f1f1f1;
     padding: 1rem;
     width: 100%;
-    height: 8rem;
-    top: 0;
     left: 0;
-    background-color: #f1f1f1;
     z-index: 1;
 }
 #navbar-mobile ul {
-
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -171,10 +167,7 @@ footer {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-#sidebar-list{
-    display: flex;
-    height: 10rem;
+    border-bottom: 1.3px ridge rgb(134, 168, 199);
 }
 
 
@@ -199,11 +192,7 @@ footer {
         font-size: 15px;
         height: 85%;
         padding: 5%;
-    }
-    .producto {
-        font-size: 15px;
         width: 50;
-        height: 85%;
     }
     #navbar-mobile {
       display: none;
